test/interpreter/jplevyak/test_default_param3.good
Error: interpreter terminated
error: ambiguous call, unable to dispatch to a single function
at test_default_param3.chpl:10 
